bin_PROGRAMS = lzo1 lzo1_99 lzo1a lzo1a_99 lzo1x_1 lzo1x_999 \
				unlzo1 unlzo1_99 unlzo1a unlzo1a_99 unlzo1x_1 unlzo1x_999
AM_CFLAGS = -Wall -Wextra -Werror -pedantic
lzo1_SOURCES		= lzo1.c
lzo1_99_SOURCES		= lzo1_99.c
lzo1a_SOURCES		= lzo1a.c
lzo1a_99_SOURCES	= lzo1a_99.c
lzo1x_1_SOURCES		= lzo1x_1.c
lzo1x_999_SOURCES	= lzo1x_999.c
unlzo1_SOURCES		= lzo1.c
unlzo1_99_SOURCES	= lzo1_99.c
unlzo1a_SOURCES		= lzo1a.c
unlzo1a_99_SOURCES	= lzo1a_99.c
unlzo1x_1_SOURCES	= lzo1x_1.c
unlzo1x_999_SOURCES	= lzo1x_999.c
lzo1_CFLAGS			= -DCOMPRESSOR=1 $(AM_CFLAGS)
lzo1_99_CFLAGS		= -DCOMPRESSOR=1 $(AM_CFLAGS)
lzo1a_CFLAGS		= -DCOMPRESSOR=1 $(AM_CFLAGS)
lzo1a_99_CFLAGS		= -DCOMPRESSOR=1 $(AM_CFLAGS)
lzo1x_1_CFLAGS		= -DCOMPRESSOR=1 $(AM_CFLAGS)
lzo1x_999_CFLAGS	= -DCOMPRESSOR=1 $(AM_CFLAGS)
unlzo1_CFLAGS		= -DCOMPRESSOR=0 $(AM_CFLAGS)
unlzo1_99_CFLAGS	= -DCOMPRESSOR=0 $(AM_CFLAGS)
unlzo1a_CFLAGS		= -DCOMPRESSOR=0 $(AM_CFLAGS)
unlzo1a_99_CFLAGS	= -DCOMPRESSOR=0 $(AM_CFLAGS)
unlzo1x_1_CFLAGS	= -DCOMPRESSOR=0 $(AM_CFLAGS)
unlzo1x_999_CFLAGS	= -DCOMPRESSOR=0 $(AM_CFLAGS)
